@@ -19,15 +19,18 @@ FROM ubuntu:latest
 
 LABEL maintainer="Jean-Christophe Malapert <jean-christophe.malapert@cnes.fr>"
 
+# Runtime distribution filename
 ARG BUILD_DATE
+ARG VCS_REF
 ARG VERSION
+
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Labels (based on http://label-schema.org/rc1/)
 LABEL \
     org.label-schema.schema-version="1.0" \
     org.label-schema.build-date=$BUILD_DATE \
-    org.label-schema.name="cdm" \
+    org.label-schema.name="planet_crs_registry" \
     org.label-schema.description="The coordinates reference system registry for solar bodies" \
     org.label-schema.url="https://github.com/pole-surfaces-planetaires/planet_crs_registry" \
     org.label-schema.vcs-url="https://github.com/pole-surfaces-planetaires/planet_crs_registry" \
@@ -37,15 +40,20 @@ LABEL \
 
 RUN apt-get update && \
     apt-get install -y \
-    software-properties-common apt-transport-https wget git\
+    software-properties-common apt-transport-https curl git\
     make python3-pip && \
     update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1 && \
     pip install setuptools && \
     git clone "https://github.com/pole-surfaces-planetaires/planet_crs_registry.git" && \
     cd planet_crs_registry && \
+    export API_TEST=True &&\
+    pip install --upgrade h11==0.8.* && \
     make
 
-# Custom prompt
-RUN echo 'export PS1="\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\[\033[01;31m\]\u@platoscope-dev\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$"' >> /etc/bash.bashrc
+# Expose the http server on 8080
+EXPOSE 8080
+
+# Health check
+HEALTHCHECK CMD curl --fail http://localhost:8080/ping || exit 1
 
 CMD ["planet_crs_registry"]
