@@ -1,4 +1,14 @@
-### remove key from docker (HEAD -> main)
+### Add docker support (HEAD -> main)
+>Thu, 8 Jul 2021 12:05:48 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### remove key from docker (origin/main)
 >Thu, 8 Jul 2021 03:18:54 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Improve code quality Improve packaging Improve pagination Implements search by keyword (tag: v0.1.0, origin/main)
+### Improve code quality Improve packaging Improve pagination Implements search by keyword (tag: v0.1.0)
 >Wed, 7 Jul 2021 17:35:32 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
